--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
+    ],
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts"],
