--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^9.10.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
