--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.2"
+    "mongoose": "^6.4.2",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
